# thegarii

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
.github/: generate_change_log.sh
.github/workflows/: check-license.yml  release.yml
examples/: fetch-latest.rs  fetch-range.rs  multiple-nodes.rs
pb/: block.proto
proto/: block.proto  firehose.proto
res/: block_height_100.json  block_height_269512.json  block_height_422250.json  data.json  tx.json
scripts/: install_arweave.sh  run_arweave.sh  run_docker.sh
src/: arweave.rs  client.rs  console.rs  encoding.rs  env.rs  extractor.rs  lib.rs  pb.rs  polling.rs  result.rs  storage.rs  types.rs
src/cmd/: backup.rs  console.rs  get.rs  mod.rs  poll.rs  restore.rs  start.rs  stream.rs  syncing.rs
src/protobuf/: block.rs
src/service/: checking.rs  grpc.rs  mod.rs  polling.rs  tracking.rs
src/service/grpc/: handler.rs  mod.rs  result.rs  types.rs
src/service/polling/: console.rs  mod.rs
