[package]
name = "thegarii"
authors = ['info@chainsafe.io']
description = 'thegarii firehose service'
version = "0.0.1"
license = "GPL-3.0"
homepage = 'https://github.com/ChainSafe/the-garii'
repository = 'https://github.com/ChainSafe/the-garii'
edition = "2021"

[dependencies]
base64-url = "1.4.10"
futures = "0.3.21"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
prost = "0.9"
rand = "0.8.5"
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.6.2"
