[package]
name = "thegarii"
authors = ['info@chainsafe.io']
description = 'thegarii firehose service'
version = "0.1.0"
license = "GPL-3.0"
homepage = 'https://github.com/ChainSafe/the-garii'
repository = 'https://github.com/ChainSafe/the-garii'
edition = "2021"
readme = "./README.md"

[[bin]]
name = "thegarii"
path = "bin/thegarii.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.52"
base64-url = "1.4.13"
bincode = "1.3.3"
dirs = "4.0.0"
env_logger = "0.9.0"
hex = "0.4.3"
futures = "0.3.21"
log = "0.4.14"
prost = "0.9"
prost-types = "0.9"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["gzip", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
uint = "0.9"
base64 = "0.21.7"

[features]
default = [ ]

[build-dependencies]
tonic-build = "0.6.2"
